--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400
 
 .navBarRight{
     display: inline-block;
+    color: #0a5b5e;
 }
 
 .navBarLeft a{
@@ -77,7 +78,6 @@ https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400
 }
 
 .navRightTextHeading{
-    color: black;
     font-weight: 100;
     font-size: 22px;
     margin-left: 12px;
@@ -346,4 +346,8 @@ https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400
 a:hover{
     cursor: pointer;
     border-bottom: 1px solid #647970;
+}
+
+.midButton button:hover{
+    cursor: pointer;
 }
