--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400
     width: 68rem;
     margin: auto;
     background-color: #f6fdf6;
-    margin-top: 10vh;
+    margin-top: 5%;
 }
 
 .navBar{
