--- a/style.css
+++ b/style.css
@@ -10,24 +10,22 @@ https://fonts.googleapis.com/css2?family=Libre+Bodoni:ital,wght@0,400..700;1,400
     font-optical-sizing: auto;
 }
 
+
 body{
     background-color: #f6fdf6;
-    /* height: 100%; */
 }
 
 .mainContent{
-    /* height: 80vh; */
-    /* width: 82vw; */
     height: 32rem;
     width: 68rem;
     margin: auto;
     background-color: #f6fdf6;
     margin-top: 5%;
+    position: relative;
 }
 
 .navBar{
     width: 80%;
-    /* height:6vh; */
     margin-left: auto;
 }
 
@@ -36,13 +34,13 @@ body{
     width: 18vw;
     background-color: #0a5b5e;
     position: absolute;
-    transform: translate(0px, -65px);
+    transform: translate(0px, -67px);
     border-radius: 0px 0px 16.43rem 0px;
+    z-index: 1;
 }
 
 
 .navBarLeft{
-    /* width: 34vw; */
     width: 51%;
     display: inline-block;
     height: 100%;
@@ -50,7 +48,6 @@ body{
 }
 
 .navBarMid{
-    /* width: 19.3vw; */
     width: 30%;
     display: inline-block;
     border: 2px solid grey;
@@ -63,14 +60,13 @@ body{
 }
 
 .navBarLeft a{
-    font-size: 20px;
+    font-size: 111%;
     text-decoration: none;
     color: #647970;
     font-weight: 100;
 }
 
 .anchorPadding{
-    /* margin-left: 50px; */
     margin-left: 12%;
 }
 
@@ -126,6 +122,8 @@ body{
     background-color: #cfd9da;
     border-radius: 50% 50% 0px 0px;
     display: inline-block;
+    position: relative;
+    z-index: 2;
 }
 
 .middleLeft{
@@ -137,6 +135,7 @@ body{
     position: absolute;
     transform: translate(-21px,42px);
     display: inline-block;
+    z-index: 3;
 }
 
 .middleLeftText{
@@ -151,7 +150,6 @@ body{
 }
 
 .midPara{
-    /* margin-top: 15px; */
     margin-top: 4%;
 }
 
@@ -161,9 +159,6 @@ body{
 }
 
 .midButton button{
-    /* margin-top: 15px; */
-    /* width: 9vw; */
-    /* height: 5vh; */
     width: 25%;
     height: 100%;
     font-size: 17px;
@@ -171,6 +166,8 @@ body{
     color: white;
     background-color: #0a5b5e;
     border: none;
+    position: relative;
+    z-index: 4;
 }
 
 .midHeading h1{
@@ -189,7 +186,6 @@ body{
     height: 70%;
     width: 90%;
     margin: auto;
-    /* margin-top: 50px; */
     margin-top: 23%;
     position: relative;
 }
@@ -198,7 +194,6 @@ body{
     position: absolute;
     text-align: center;
     width: 100%;
-    /* padding: 9px; */
     padding: 4%;
     background-color: #0a5b5e;
 }
@@ -212,11 +207,8 @@ body{
     position: absolute;
     width: 100%;
     text-align: center;
-    /* margin-top: 11.5vh; */
     margin-top: 37%;
     background-color: #e5ece5;
-    /* height: 6vh; */
-    /* padding: 5px; */
     padding: 4%;
     font-weight: bolder;
     font-size: 19px;
@@ -226,11 +218,8 @@ body{
     position: absolute;
     width: 100%;
     text-align: center;
-    /* margin-top: 18.8vh; */
     margin-top: 61%;
     background-color: #e5ece5;
-    /* height: 6vh; */
-    /* padding: 5px; */
     padding: 4%;
     font-weight: bolder;
     font-size: 19px;
@@ -240,11 +229,8 @@ body{
     position: absolute;
     width: 100%;
     text-align: center;
-    /* margin-top: 26vh; */
     margin-top: 85%;
     background-color: #e5ece5;
-    /* height: 6vh; */
-    /* padding: 5px; */
     padding: 4%;
     font-weight: bolder;
     font-size: 19px;
@@ -252,13 +238,11 @@ body{
 
 .footer{
     width: 100%;
-    /* height: 19vh; */
     height: 23%;
     margin-top: 2vh;
 }
 
 .footerLeft{
-    /* width: 66vw; */
     width: 81%;
     height: 100%;
     background-color: #c6cdc6;
@@ -266,7 +250,6 @@ body{
 }
 
 .footerRight{
-    /* width: 15vw; */
     width: 17%;
     height: 100%;
     display: inline-block;
@@ -277,7 +260,6 @@ body{
 }
 
 .footerLeftOne{
-    /* width: 19vw; */
     width: 27%;
     height: 100%;
     position: relative;
@@ -285,23 +267,16 @@ body{
 
 
 .footerLeftTwo img{
-    /* width: 11.5vw; */
-    /* height: 26vh; */
     height: 26%;
     margin-left: 4%;
-    /* margin-left: 32px; */
     position: absolute;
     transform: translate(4px,-193px);
     border-radius: 50% 50% 0px 0px;
 }
 
 .footerLeftThree img{
-    /* width: 11.5vw; */
-    /* height: 100%; */
-    /* margin-left: 32px; */
     height: 26%;
     margin-left: 3.2%;
-    /* height: 26vh; */
     position: absolute;
     transform: translate(200px,-193px);
     border-radius: 50% 50% 0px 0px;
@@ -309,10 +284,6 @@ body{
 }
 
 .footerLeftFour img{
-    /* width: 11.5vw; */
-    /* height: 100%; */
-    /* margin-left: 32px; */
-    /* height: 26vh; */
     height: 26%;
     margin-left: 3.2%;
     position: absolute;
@@ -323,8 +294,6 @@ body{
 .footerContent{
     position: absolute;
     width: 100%;
-    /* padding: 23px; */
-    /* margin-left: 10px; */
     padding: 10%;
     margin-left: 1%;
 }
@@ -361,13 +330,9 @@ body{
 
 .bootomImage img{
     position: absolute;
-    /* height: 80px; */
-    /* margin-left: 73vw; */
     height: 12%;
     right: 0;
-    /* width: 18vw; */
     width: 18%;
-    margin-top: -2%;
 }
 
 
